fix: add handle for database exception and handle role relationship